Working on ability to apply spans to PDFs.